Fixed overlap on navbar

--- a/FrontEnd/src/components/navigation_bar/Navbar.css
+++ b/FrontEnd/src/components/navigation_bar/Navbar.css
@@ -7,6 +7,7 @@
     margin: 0px;
     font-family: sans-serif;
     font-weight: bold;
+    z-index: 1000;
 }
 
 .navbar-options{
